# Automated-Health-Clinic-Management

./: .gitignore  README.md
AHCM/: CMakeLists.txt
AHCM/include/: AHCM.h
AHCM/src/: AHCM.cpp
